--- a/deployment.yml
+++ b/deployment.yml
@@ -1,23 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: django-backend-poll-app-two-test
+  name: django-backend-poll-app-jenkins
   labels:
-    app: django-backend-poll-app-two-test
+    app: django-backend-poll-app-jenkins
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      app: django-backend-poll-app-two-test
+      app: django-backend-poll-app-jenkins
   template:
     metadata:
       labels:
-        app: django-backend-poll-app-two-test
+        app: django-backend-poll-app-jenkins
     spec:
       containers:
       - name: django-poll-kube
         imagePullPolicy: Always
-        image: gopalghule05/lnx_poll_prj:latest
+        image: gopalghule05/lnx_poll_jenkins_prj:latest
         command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
         ports:
         - containerPort: 8000
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
+  revisionHistoryLimit: 5
