--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
    web:
        build: .
        container_name: lnx_poll_prj_latest
-       image: gopalghule05/lnx_poll_jenkins_prj:latest
+       image: gopalghule05/lnx_poll_jenkins_prj_demo:1.0
        command: python3 manage.py runserver 0.0.0.0:8000
        ports:
            - 8000:8000
