--- a/deployment.yml
+++ b/deployment.yml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: django-backend-poll-app-jenkins
+  name: django-backend-poll-app-jenkins-demo
   labels:
-    app: django-backend-poll-app-jenkins
+    app: django-backend-poll-app-jenkins-demo
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: django-backend-poll-app-jenkins
+      app: django-backend-poll-app-jenkins-demo
   template:
     metadata:
       labels:
-        app: django-backend-poll-app-jenkins
+        app: django-backend-poll-app-jenkins-demo
     spec:
       containers:
       - name: django-poll-kube
         imagePullPolicy: Always
-        image: gopalghule05/lnx_poll_jenkins_prj_demo:1.0
+        image: gopalghule05/lnx_poll_jenkins_prj_demo:version.0.1
         command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
         ports:
         - containerPort: 8000
