--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.8'
 services:
    web:
        build: .
-       container_name: lnx_poll_prj_latest
-       image: gopalghule05/lnx_poll_jenkins_prj_demo:version.0.1
+       container_name: lnx_poll_prj_Jenkins
+       image: gopalghule05/lnx_poll_prj_jenkins:1.0
        command: python3 manage.py runserver 0.0.0.0:8000
        ports:
            - 8000:8000
