--- a/argocd/service.yml
+++ b/argocd/service.yml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
-  labels:
-    app: nginx
+  name: django-poll-app-service
 spec:
-  type: NodePort
   selector:
-    app: django-backend-poll-app
+    app: django-poll-app
   ports:
-  - port: 8000
+  - protocol: TCP
+    port: 8080
     targetPort: 8000
+  type: NodePort
