--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -74,7 +74,7 @@ jobs:
         cat deployment.yaml
         git add .
         git commit -m "Done by Github Actions Job change manifest: ${{ github.run_number }}"
-        git push origin main
+        git push origin Master
       env:
         GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
         GIT_PASSWORD: ${{ secrets.GIT_PASSWORD }}
