--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.8, 3.9, 3.10]
+        python-version: [3.10]
 
     steps:
     - name: Checkout code
@@ -26,12 +26,12 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python3 -m pip3 install --upgrade pip3
+        pip3 install -r requirements.txt
 
     - name: Run Tests
       run: |
-        python manage.py test
+        python3 manage.py test
 
   docker:
     needs: build
