--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.10]
+        python-version: [3.7, 3.8, 3.9]
 
     steps:
     - name: Checkout code
@@ -28,7 +28,7 @@ jobs:
       run: |
         python3 -m pip3 install --upgrade pip3
         pip3 install -r requirements.txt
-
+,
     - name: Run Tests
       run: |
         python3 manage.py test
