--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
    web:
        build: .
        container_name: lnx_poll_prj_Jenkins
-       image: gopalghule05/lnx_poll_prj_argocd:${TAG}
+       image: gopalghule05/lnx_poll_prj_argocd:latest
        command: python3 manage.py runserver 0.0.0.0:8000
        ports:
            - 8000:8000
