--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -65,7 +65,7 @@ jobs:
     steps:
     - name: Modify the image
       run: |
-        git config user.email gpalghule05@gmail.com
+        git config user.email gopalghule05@gmail.com
         git config user.name gopal-py07
         pwd
         cat deployment.yaml
