--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -75,7 +75,7 @@ jobs:
         git add .
         git commit -m "Done by Github Actions Job change manifest: ${{ github.run_number }}"
         git push origin Master
-      env:
-        GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
-        GIT_PASSWORD: ${{ secrets.GIT_PASSWORD }}
-        RUN_NUMBER: ${{ github.run_number }}
+      # env:
+      #   GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
+      #   GIT_PASSWORD: ${{ secrets.GIT_PASSWORD }}
+      #   RUN_NUMBER: ${{ github.run_number }}
