--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -75,9 +75,9 @@ jobs:
         git config user.email gopalghule05@gmail.com
         git config user.name gopal-py07
         pwd
-        cat deployment.yaml
+        cat deployment.yml
         pwd
-        sed -i "s+gopalghule05/lnx_poll_prj_argocd.*+gopalghule05/lnx_poll_prj_argocd:$RUN_NUMBER+g" deployment.yaml
+        sed -i "s+gopalghule05/lnx_poll_prj_argocd.*+gopalghule05/lnx_poll_prj_argocd:$RUN_NUMBER+g" deployment.yml
         cat deployment.yaml
         git add .
         git commit -m "Done by Github Actions Job change manifest: ${{ github.run_number }}"
