--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -77,7 +77,7 @@ jobs:
         pwd
         cat deployment.yml
         pwd
-        sed -i "s+gopalghule05/lnx_poll_prj_argocd.*+gopalghule05/lnx_poll_prj_argocd:$RUN_NUMBER+g" deployment.yml
+        sed -i "s+gopalghule05/lnx_poll_prj_argocd:.*+gopalghule05/lnx_poll_prj_argocd:$RUN_NUMBER+g" deployment.yml
         cat deployment.yml
         git add .
         git commit -m "Done by Github Actions Job change manifest: ${{ github.run_number }}"
