--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -81,7 +81,7 @@ jobs:
         cat deployment.yml
         git add .
         git commit -m "Done by Github Actions Job change manifest: ${{ github.run_number }}"
-        git push origin Master
+        git push
       env:
         GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
         GIT_PASSWORD: ${{ secrets.GIT_PASSWORD }}
