--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -84,5 +84,5 @@ jobs:
         git push
       env:
         GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
-        GIT_PASSWORD: ${{ secrets.GIT_TOKEN }}
+        GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
         RUN_NUMBER: ${{ github.run_number }}
