--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches: ["master"]
 
+permissions:
+  contents: write
 jobs:
   build:
 
@@ -38,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
