--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
 version: '3.8'
 services:
-   web:
-       build: .
-       container_name: lnx_poll_prj_Jenkins
-       image: gopalghule05/lnx_poll_prj_argocd:latest
-       command: python3 manage.py runserver 0.0.0.0:8000
-       ports:
-           - 8000:8000
+  web:
+    build:
+      context: .
+      args:
+        TAG: ${GITHUB_RUN_NUMBER}
+    container_name: lnx_poll_prj_Jenkins
+    image: gopalghule05/lnx_poll_prj_argocd:${GITHUB_RUN_NUMBER}
+    command: python3 manage.py runserver 0.0.0.0:8000
+    ports:
+      - 8000:8000
