--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
       args:
         TAG: ${GITHUB_RUN_NUMBER}
     container_name: lnx_poll_prj_Jenkins
-    image: gopalghule05/lnx_poll_prj_argocd:${GITHUB_RUN_NUMBER}
+    #image: gopalghule05/lnx_poll_prj_argocd:${GITHUB_RUN_NUMBER}
+    image: gopalghule05/lnx_poll_prj_argocd:v100
     command: python3 manage.py runserver 0.0.0.0:8000
     ports:
       - 8000:8000
