--- a/argocd/service.yml
+++ b/argocd/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: django-poll-app-service
+  name: django-poll-app-service1
 spec:
   selector:
-    app: django-poll-app
+    app: poll-app
   ports:
   - protocol: TCP
     port: 8080
